# vocal-intelligence-lab

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
audits/: README.md
docs/: ARCHITECTURE.md  CONVERSATION_POLICY.md  OUTPUT_SCHEMA.md  PROGRESS.md  PROJECT_BRIEF.md  PROJECT_PLAN.md  REAL_AUDIO_PROTOCOL.md  THRESHOLD_CALIBRATION.md  VALIDATION_PLAN.md
docs/templates/: real-audio-result-template.md
scripts/: check_staged_files.py
src/vocal_intel/: __init__.py  __main__.py  cli.py  config.py  ingest.py  loudness.py  pace.py  pauses.py  pitch.py  policy.py  preprocess.py  privacy.py  protocol.py  recommend.py  summary.py  synthetic.py  transcript_meta.py  vad.py
tests/: test_config.py  test_ingest.py  test_loudness.py  test_output_document_discriminators.py  test_pace.py  test_pauses.py  test_pitch.py  test_policy.py  test_preprocess.py  test_privacy.py  test_protocol.py  test_recommend.py  test_smoke.py  test_summary.py  test_synthetic.py  test_transcript_meta.py  test_vad.py
tests/data/: schema_manifest_recommend_v1_1.json  schema_manifest_transcript_1_0.json  schema_manifest_v1.json  transcript_metadata_golden.json
